@@ -13,7 +13,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/api/metadata")
@@ -42,7 +41,7 @@ public class WhoisMetadataController extends ApiController {
                         hasJustLongFlag ? flag : "",
                         f.getDescription());
             }
-        }).collect(Collectors.toList()));
+        }).toList());
     }
 
 
